# Lumiqe

./: .env.example  .gitignore  BRUTAL_EVALUATION.md  DEPLOY_CHECKLIST.md  MIGRATION_NOTES.md  Makefile  README.md  TASKS.md  claude.md  docker-compose.test.yml  docker-compose.yml  replace_brand.py
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  STRIPE_TESTING.md  alembic.ini  benchmark_accuracy.py  download_models.py  requirements-dev.txt  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py  models.py
backend/data/: __init__.py  demo_results.json  products.json
backend/face-parsing/: model.py  resnet.py
backend/models/: season_classifier.joblib
backend/scripts/: backup_db.sh
backend/tests/: __init__.py  conftest.py  test_api_integration.py  test_auth_models.py  test_b2b_api.py  test_celebrity_api.py  test_celebrity_match.py  test_chat_validation.py  test_code_quality.py  test_community.py  (+39 more)
context/: architecture-rules.md  business-constraints.md  security_spec.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  tailwind.config.ts  vitest.config.ts  vitest.setup.tsx
k8s/: backend-deployment.yaml  celery-worker.yaml  frontend-deployment.yaml  grafana.yaml  postgres-backup.yaml  postgres-replica.yaml  prometheus-config.yaml  sealed-secrets.yaml
sdk/: pyproject.toml
sdk/lumiqe_sdk/: __init__.py  client.py  models.py
sdk/tests/: test_sdk.py
training/: season_classifier_colab.ipynb
(+399 files in other folders)
