[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lumiqe-sdk"
version = "1.0.0"
description = "Python SDK for the Lumiqe Color Analysis API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Lumiqe", email = "dev@lumiqe.in"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://lumiqe.in"
Documentation = "https://docs.lumiqe.in"
